fixed logo sizing on safari

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body::before {
 }
 
 .logo {
+    width: 100%;
     max-width: 40rem;
 }
 
